--- a/style.css
+++ b/style.css
@@ -1,6 +1,77 @@
-
 body {
     text-align: center;
     background-color: #e5e5e5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    padding: 20px;
+    box-sizing: border-box;
+}
 
-};
+.choices {
+    display: flex;
+    text-align: center;
+    border: 2px solid black;
+    width: 100%;
+    max-width: 1260px;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    box-sizing: border-box;
+    gap: 20px;
+    background-color: burlywood;
+}
+
+/* div {
+    display: flex;
+    background-color: burlywood;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 80%;
+
+    img {
+        max-width: 40%;
+    }
+} */
+
+.playerChoice,
+.computerChoice {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-direction: column;
+}
+
+.playerChoice {
+    width: 40%;
+    gap: 10px;
+}
+
+.computerChoice {
+    width: 40%;
+}
+
+img {
+    max-width: 250px;
+}
+
+.vsP {
+    width: 10%;
+}
+
+.fight,
+#againBtn {
+    margin: 20px 0;
+    padding: 10px 20px;
+}
+
+.scores {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin: 20px 0;
+}
